spring backlog card support added

--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,10 @@ TOKEN=
 COLUMN_NODE_ID=
 
 # @codex_bot notify URL
-NOTIFIER_URL=
+NOTIFIER_URL= 
 
 # List of people to tag in the «Pull Requests» message
-MENTION=
+MENTION = "f0m41h4u7 specc nikmel nikmel2803 talyguryn GeekaN n0str neSpecc"
 
 # If using docker-compose set time there
 # Default
