--- a/package.json
+++ b/package.json
@@ -3,11 +3,22 @@
   "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "lint": "eslint -c .eslintrc.json src/ --ext .js",
+    "lint:errors": "eslint -c .eslintrc.json src/ --ext .js --quiet",
+    "lint:fix": "eslint  -c .eslintrc.json src/ --ext .js --fix"
+  },
   "dependencies": {
     "@octokit/core": "^3.1.2",
     "axios": "^0.19.2",
     "cron": "^1.8.2",
     "dotenv": "^8.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^7.12.1",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1"
+  }
 }
