--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,5 @@
 {
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es2021": true
-    },
     "extends": [
-        "standard"
-    ],
-    "parserOptions": {
-        "ecmaVersion": 12
-    },
-    "rules": {
-    }
+        "codex"
+    ]
 }
