--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
   },
   "devDependencies": {
     "eslint": "^7.12.1",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1"
+    "eslint-config-codex": "^1.5.2",
+    "typescript": "^4.1.3"
   }
 }
