--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "devDependencies": {
     "eslint": "^7.12.1",
-    "eslint-config-codex": "^1.5.2",
-    "typescript": "^4.1.3"
+    "eslint-config-codex": "^1.6.0"
   }
 }
