Error removed and name added

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ COLUMN_NODE_ID=
 NOTIFIER_URL=
 
 # List of people to tag in the «Pull Requests» message
-MENTION = "f0m41h4u7 specc nikmel2803 talyguryn GeekaN n0str neSpecc"
+MENTION = "f0m41h4u7 specc nikmel2803 talyguryn GeekaN2 n0str neSpecc"
 
 # If using docker-compose set time there
 PR_TIME="0 9,18 * * 1-5"
