The message for meeting notification added

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,4 @@ MENTION = "f0m41h4u7 specc nikmel2803 talyguryn GeekaN2 n0str neSpecc"
 
 # If using docker-compose set time there
 PR_TIME="0 9,18 * * 1-5"
+MEETING_TIME = "0 21 * * 1-5"
