Support for PR Review in progress added

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@
 TOKEN=
 
 # Node id
-COLUMN_NODE_ID=
+COLUMN_NODE_ID_TO_DO=
+COLUMN_NODE_ID_PR=
 
 # @codex_bot notify URL
 # Open https://t.me/codex_bot
@@ -18,5 +19,6 @@ MENTION = "ilyamore88 fabled228 Xemka kebyo GeekaN2 ranemihir robonetphy neSpecc
 MEETING_MENTION = "specc guryn khaydarovm nikmel2803 xemk4 gohabereg ilyamore88 GeekaN augustovich n0str f0m41h4u7 polina_shneider oybekmuslimov"
 
 # If using docker-compose set time there
+TO_DO_TIME="0 9,20 * * 1-5"
 PR_TIME="0 9,20 * * 1-5"
 MEETING_TIME = "0 21 * * 1-5"
