--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node src/index.js",
     "lint": "eslint -c .eslintrc.json src/ --ext .js",
     "lint:errors": "eslint -c .eslintrc.json src/ --ext .js --quiet",
-    "lint:fix": "eslint  -c .eslintrc.json src/ --ext .js --fix"
+    "lint:fix": "eslint  -c .eslintrc.json src/ --ext .js --fix",
+    "get-projects": "node bin/get-projects.js"
   },
   "dependencies": {
     "@octokit/core": "^3.1.2",
