[Feature] Replace link with title added

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ COLUMN_NODE_ID_PR=
 NOTIFIER_URL=
 
 # List of people to tag in the «Pull Requests» message
-MENTION = "ilyamore88 fabled228 Xemka kebyo GeekaN2 ranemihir robonetphy neSpecc nikmel2803 talyguryn gohabereg khaydarov"
+MENTION = "ilyamore88 fabled228 Xemka kebyo GeekaN2 ranemihir Robonetphy neSpecc nikmel2803 talyguryn gohabereg khaydarov f0m41h4u7 SunnyCapt"
 
 # List of people to tag in the «Meeting Message» message
 MEETING_MENTION = "specc guryn khaydarovm nikmel2803 xemk4 gohabereg ilyamore88 GeekaN augustovich n0str f0m41h4u7 polina_shneider oybekmuslimov"
