--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/index.js",
+    "start:dev": "nodemon src/index.js",
     "lint": "eslint -c .eslintrc.json src/ --ext .js",
     "lint:errors": "eslint -c .eslintrc.json src/ --ext .js --quiet",
     "lint:fix": "eslint  -c .eslintrc.json src/ --ext .js --fix",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "eslint": "^7.12.1",
-    "eslint-config-codex": "^1.6.0"
+    "eslint-config-codex": "^1.6.0",
+    "nodemon": "^2.0.7"
   }
 }
