--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@octokit/core": "^3.1.2",
     "axios": "^0.19.2",
     "cron": "^1.8.2",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "parse-github-url": "^1.0.2"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
