--- a/.env.example
+++ b/.env.example
@@ -13,10 +13,10 @@ COLUMN_NODE_ID_PR=
 NOTIFIER_URL=
 
 # List of people to tag in the «Pull Requests» message
-MENTION = "ilyamore88 fabled228 Xemka kebyo GeekaN2 ranemihir robonetphy neSpecc nikmel2803 n0str talyguryn gohabereg khaydarov f0m41h4u7 SunnyCapt dependabot"
+MENTION = "ilyamore88 fabled228 Xemka kebyo GeekaN2 robonetphy neSpecc nikmel2803 n0str talyguryn gohabereg khaydarov f0m41h4u7 SunnyCapt dependabot"
 
 # List of people to tag in the «Meeting Message» message
-MEETING_MENTION = "specc guryn khaydarovm nikmel2803 xemk4 gohabereg ilyamore88 GeekaN augustovich n0str f0m41h4u7 polina_shneider oybekmuslimov"
+MEETING_MENTION = "specc guryn khaydarovm nikmel2803 xemk4 gohabereg ilyamore88 GeekaN augustovich n0str f0m41h4u7 oybekmuslimov fabl228 robonetphy"
 
 # If using docker-compose set time there
 TO_DO_TIME="0 9,20 * * 1-5"
