--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "get-projects": "node bin/get-projects.js"
   },
   "dependencies": {
+    "@hawk.so/nodejs": "^2.2.0",
     "@octokit/core": "^3.1.2",
     "axios": "^0.19.2",
     "cron": "^1.8.2",
