Update docs in env

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,34 @@ TOKEN=
 # HAWK Catcher TOKEN
 HAWK_TOKEN=
 
-# Node id
+# Columns Nodes id
+# To get these values use any app for sending requests (Insomnia for example) and send the following request
+# Use your data for the YOUR_GITHUB_PERSONAL_ACCESS_TOKEN, org name and number of project (11 in this example) from it's link
+# If everything is correct you will get a list of project's columns with theis node id's which you need for the script.
+#
+# Endpoint: https://api.github.com/graphql
+# Request Type: POST
+# Headers:
+#     Authorization: bearer YOUR_GITHUB_PERSONAL_ACCESS_TOKEN
+#     Content-Type: application/json
+# Body Type: GraphQL
+# Body: 
+#     query {
+#       organization(login: "codex-team") {
+#         project(number: 11) {
+#           id,
+#           name,
+#           columns(first: 10) {
+#             edges {
+#               node {
+#                 id,
+#                 name
+#               } 
+#             }
+#           }
+#         }
+#       }
+#     }
 COLUMN_NODE_ID_TO_DO=
 COLUMN_NODE_ID_PR=
 
@@ -16,12 +43,12 @@ COLUMN_NODE_ID_PR=
 NOTIFIER_URL=
 
 # List of people to tag in the «Pull Requests» message
-MENTION = "ilyamore88 fabled228 Xemka kebyo GeekaN2 robonetphy neSpecc nikmel2803 n0str talyguryn gohabereg khaydarov f0m41h4u7 SunnyCapt dependabot"
+MENTION = "ilyamore88 GeekaN2 robonetphy neSpecc nikmel2803 n0str talyguryn gohabereg khaydarov f0m41h4u7 dependabot"
 
 # List of people to tag in the «Meeting Message» message
-MEETING_MENTION = "specc guryn khaydarovm nikmel2803 xemk4 gohabereg ilyamore88 GeekaN augustovich n0str f0m41h4u7 oybekmuslimov fabl228 robonetphy"
+MEETING_MENTION = "specc guryn khaydarovm nikmel2803 gohabereg ilyamore88 GeekaN augustovich n0str f0m41h4u7 robonetphy"
 
-# If using docker-compose set time there
+# Define job
 TO_DO_TIME="0 9,20 * * 1-5"
 PR_TIME="0 9,20 * * 1-5"
 MEETING_TIME = "0 21 * * 1-5"
